Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.8(EOL)
-
None
Description
Hello,
I'm trying to migrate from MariaDB 10.5 to MariaDB 10.8, but I'm getting the following crash.
Any ideas?
What I'm doing:
1) MariaBackup on source server (10.5)
2) "prepare" backup on source server (10.5)
3) rsync to new server
4) stop mariadb on the new server (10.8)
5) rm -rf /var/lib/mysql/*
6) "move-back" on the new server (10.8)
7) chown -R mysql:mysql /var/lib/mysql/
8) mariadb-upgrade (10.8)
When looking at the old server, mysql.proc is an Aria table with 0 rows, utf8_general_ci
> mysql_upgrade
|
Phase 1/7: Checking and upgrading mysql database
|
Processing databases
|
mysql
|
mysql.column_stats OK
|
mysql.columns_priv OK
|
mysql.db OK
|
mysql.event OK
|
mysql.func OK
|
mysql.global_priv OK
|
mysql.gtid_slave_pos OK
|
mysql.help_category OK
|
mysql.help_keyword OK
|
mysql.help_relation OK
|
mysql.help_topic OK
|
mysql.index_stats OK
|
mysql.innodb_index_stats OK
|
mysql.innodb_table_stats OK
|
mysql.plugin OK
|
mysql.proc OK
|
mysql.procs_priv OK
|
mysql.proxies_priv OK
|
mysql.roles_mapping OK
|
mysql.servers OK
|
mysql.slave_master_info OK
|
mysql.slave_relay_log_info OK
|
mysql.slave_worker_info OK
|
mysql.table_stats OK
|
mysql.tables_priv OK
|
mysql.time_zone OK
|
mysql.time_zone_leap_second OK
|
mysql.time_zone_name OK
|
mysql.time_zone_transition OK
|
mysql.time_zone_transition_type OK
|
mysql.transaction_registry OK
|
Phase 2/7: Installing used storage engines... Skipped
|
Phase 3/7: Fixing views
|
xxx.xxx OK
|
yyy.yyy OK
|
mysql.user OK
|
Phase 4/7: Running 'mysql_fix_privilege_tables'
|
ERROR 1408 (HY000) at line 425: Event Scheduler: An error occurred when initializing system tables. Disabling the Event Scheduler.
|
ERROR 1728 (HY000) at line 836: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 838: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 871: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 873: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 903: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 905: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 954: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 956: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1041: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1043: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1089: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1091: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1146: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1148: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1197: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1199: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1248: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1250: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1288: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1290: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1335: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1337: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1379: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1381: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1422: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1424: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1461: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1463: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1499: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1501: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1542: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1544: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1670: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1672: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1860: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1862: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1896: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1898: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1952: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1954: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1977: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 1979: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 2002: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 2004: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 2455: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 2505: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 2569: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 2621: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 2673: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 2745: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 2821: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 2863: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 2905: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 2961: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 3007: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 3025: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 3087: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 3351: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 3405: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 3459: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 3513: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 3621: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 3681: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 3788: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 3872: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 3942: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 4004: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 4044: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 4076: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 4134: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 4188: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 4226: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 4298: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 4338: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 4370: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 4428: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 4482: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 4520: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 4590: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 4636: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 4682: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 4728: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 4772: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 4864: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 5068: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 5070: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 5207: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 5209: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 5255: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 5257: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 6085: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 6087: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 6281: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 6283: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 6527: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 6529: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 6778: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 6780: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 6805: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 6807: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 6845: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 6847: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 6893: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 6895: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 6932: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 6934: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 6959: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 6961: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7001: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7003: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7052: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7054: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7091: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7093: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7191: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7193: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7308: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7310: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7366: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7368: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7486: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7488: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7516: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7518: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7537: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7539: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7662: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7664: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7692: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7694: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7713: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7715: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7768: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 7770: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 8348: Cannot load from mysql.proc. The table is probably corrupted
|
ERROR 1728 (HY000) at line 8350: Cannot load from mysql.proc. The table is probably corrupted
|
FATAL ERROR: Upgrade failed
|
Attachments
Issue Links
- is duplicated by
-
MDEV-29156 mysql.proc is corrupt - has encoding utf8mb4 expecting utf8mb3
-
- Closed
-
-
MDEV-31288 MariaDB-upgrade command fails
-
- Closed
-
- relates to
-
MDEV-30126 mariadb-install-db fails to install under --old-mode="" causing ("max key length is 2300 bytes")
-
- Open
-
-
MDEV-30555 The server does not detect changes in NULL-ability of system table columns
-
- Closed
-